# find-duplicate-files

./: .gitignore  pyproject.toml
src/find_duplicate_files/: find_duplicate_files.py  find_files.py  find_files_parallel.py
