[tool.poetry]
name = "find-duplicate-files"
version = "0.1.0"
description = ""
authors = ["Demas Jaring <dcjaring@gmail.com>"]
readme = "README.md"
packages = [{include = "find_duplicate_files", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
